--- a/trunk/src/viewer/viewer.vcproj
+++ b/trunk/src/viewer/viewer.vcproj
@@ -20,7 +20,7 @@
 			OutputDirectory="$(SolutionDir)../out/$(ProjectName)/$(PlatformName)/$(ConfigurationName)"
 			IntermediateDirectory="$(SolutionDir)../out/$(ProjectName)/$(PlatformName)/$(ConfigurationName)"
 			ConfigurationType="1"
-			UseOfMFC="1"
+			UseOfMFC="2"
 			CharacterSet="2"
 			>
 			<Tool
@@ -47,7 +47,7 @@
 				AdditionalIncludeDirectories="../3rdparty/api/devil/include/;../3rdparty/api/;../"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_DEPRECATE;WIN32_LEAN_AND_MEAN"
 				BasicRuntimeChecks="3"
-				RuntimeLibrary="1"
+				RuntimeLibrary="3"
 				UsePrecompiledHeader="2"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
@@ -66,10 +66,10 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="vis$(PlatformName)$(ConfigurationName).lib"
+				AdditionalDependencies="vis$(PlatformName)$(ConfigurationName).lib fits$(PlatformName).lib tinyxmld_STL$(PlatformName).lib sdsslib$(PlatformName)$(ConfigurationName).lib"
 				OutputFile="$(SolutionDir)../$(ProjectName)$(PlatformName)$(ConfigurationName).exe"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="../3rdParty/api/vis/lib"
+				AdditionalLibraryDirectories="../3rdparty/api/tinyxml;../3rdparty/api/cfitsio;../3rdparty/api/devil/lib;../3rdParty/api/vis/lib;../sdsslib/lib"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(IntDir)/$(ProjectName).pdb"
 				SubSystem="2"
@@ -156,11 +156,11 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="vis$(PlatformName)$(ConfigurationName).lib"
+				AdditionalDependencies="vis$(PlatformName)$(ConfigurationName).lib fits$(PlatformName).lib tinyxmld_STL$(PlatformName).lib sdsslib$(PlatformName)$(ConfigurationName).lib"
 				OutputFile="$(SolutionDir)../$(ProjectName)$(PlatformName)$(ConfigurationName).exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="../3rdParty/api/vis/lib"
+				AdditionalLibraryDirectories="../3rdparty/api/tinyxml;../3rdparty/api/cfitsio;../3rdparty/api/devil/lib;../3rdParty/api/vis/lib;../sdsslib/lib"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(IntDir)/$(ProjectName).pdb"
 				SubSystem="2"
