--- a/trunk/src/viewer/viewer.vcproj
+++ b/trunk/src/viewer/viewer.vcproj
@@ -307,6 +307,14 @@
 			>
 		</File>
 		<File
+			RelativePath=".\spectraVisDataSet.cpp"
+			>
+		</File>
+		<File
+			RelativePath=".\spectraVisDataSet.h"
+			>
+		</File>
+		<File
 			RelativePath=".\stdafx.cpp"
 			>
 			<FileConfiguration
