--- a/src/analyze/analyze.vcxproj.filters
+++ b/src/analyze/analyze.vcxproj.filters
@@ -4,6 +4,7 @@
     <ClCompile Include="analyze.cpp" />
     <ClCompile Include="..\framework.cpp" />
     <ClCompile Include="SOFMNetwork.cpp" />
+    <ClCompile Include="SOFMNetworkSettings.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\framework.h" />
