--- a/src/fpgaPlayground/fpgaPlayground.vcxproj.filters
+++ b/src/fpgaPlayground/fpgaPlayground.vcxproj.filters
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="fpgaPlayground.cpp" />
     <ClCompile Include="HLS\AFA\AFANetworkSettings.c" />
     <ClCompile Include="HLS\AFA\AFASpectra.c" />
     <ClCompile Include="HLS\AFA\AFARandom.c" />
     <ClCompile Include="HLS\AFA\AFAProcessing.c" />
+    <ClCompile Include="fpgaPlayground.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="HLS\AFA\include\AFADefines.h" />
